# WOAh

./: .gitmodules  README.md  privacy.html
playground/: README.md
playground/ag_001_WeatherReporter/: .gitignore  README.md  wttr_weather_test.py
playground/ag_010_MailMan/: .gitignore  MailMan.py  README.md  gmail_auth.py  gmail_read_test.py  gmail_test.py  mail_sync.py  main.py  pyproject.toml
playground/ag_011_Event_Handler/: Event_Handler.py  README.md  google_auth.py  pyproject.toml
playground/ag_100_PostMan/: .gitignore  README.md  pyproject.toml
playground/project_001_Agent_from_scratch/: agent.py  open_weather_test.py  pyproject.toml
